--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -1,126 +1,123 @@
 .places {
-  padding-left: 30px;
-}
-.places h1 {
-  font-size: 30px;
-}
-.places_title {
-  padding-top: 30px;
-  margin-bottom: -30px;
-}
-.articles {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-article {
-  width: 390px;
-  margin: 20px;
-  padding: 20px;
-  border: solid #ff5a5f 1px;
-  border-radius: 4px;
-  text-align: center;
-  font-size: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-bottom: 30px;
-  position: relative;
-  align-items: center;
-}
-article h2 {
-  font-size: 30px;
-  padding-left: 0%;
-}
-.article_title {
+
+.places h1 {
   width: 100%;
+  font-size: 30px;
+  padding-left: 20px;
+  margin: 10px auto auto;
+}
+
+.places article {
+  width: 390px;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 4px;
+  border: 1px solid #ff5a5f;
+  box-sizing: border-box;
+}
+
+.places h2 {
+  font-size: 30px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  flex-grow: 1;
+}
+
+article {
+  z-index: -1;
+  display: flex;
+  flex-wrap: wrap;
+}
+.article_places_header {
+  width: 100%;
+  display: flex;
 }
 
 .price_by_night {
-  color: #ff5a5f;
-  font-size: 30px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
   min-width: 60px;
   height: 60px;
+  color: #ff5a5f;
   border: 4px solid #ff5a5f;
   border-radius: 50%;
-  padding: 5px;
-  position: absolute;
-  right: 10px;
-}
-
-.price_title {
-  justify-content: center;
+  font-size: 30px;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  margin-bottom: 5px;
 }
 .information {
+  width: 100%;
   height: 80px;
-  border-top: solid #dddddd 1px;
-  border-bottom: solid #dddddd 1px;
+  border-top: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
   display: flex;
-  justify-content: center;
-}
-.guest_icon {
-  height: inherit;
-  width: inherit;
-  background: url("../images/icon_group.png");
-  background-repeat: no-repeat;
-  margin-left: 35px;
-}
-.guest_number h2 {
-  font-size: 14px;
-  color: #484848;
-  font-weight: normal;
-}
-
-.number_rooms,
-.number_bathrooms,
-.max_guest {
-  width: 100px;
-  display: flex;
-  height: inherit;
-  flex-direction: column;
-  justify-content: center;
-}
-.rooms_icon {
-  height: inherit;
-  width: inherit;
-  background: url("../images/icon_bed.png");
-  background-repeat: no-repeat;
-  margin-left: 35px;
-}
-.rooms_number h2 {
-  font-size: 14px;
-  color: #484848;
-  font-weight: normal;
-}
-
-.bathrooms_icon {
-  height: inherit;
-  width: inherit;
-  background: url("../images/icon_shower.png");
-  background-repeat: no-repeat;
-  margin-left: 35px;
-}
-.bathrooms_number h2 {
-  font-size: 14px;
-  color: #484848;
-  font-weight: normal;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 .user {
-  font-size: 14px;
-  color: #484848;
-  text-align: left;
-  margin-top: 15px;
+  padding: 20px 0 5px;
 }
-.description {
-  font-size: 14px;
+.user b,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.max_guest {
+  background-image: url(../images/icon_group.png);
+}
+
+.number_rooms {
+  background-image: url(../images/icon_bed.png);
+}
+
+.number_bathrooms {
+  background-image: url(../images/icon_shower.png);
+}
+
+.max_guest,
+.number_rooms,
+.number_bathrooms {
+  width: 100px;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column-reverse;
+  background-position-x: center;
+  text-align: center;
+}
+
+.places .amenities,
+.places .reviews {
+  margin-top: 40px;
+  width: 100%;
+  height: inherit;
+}
+
+.places .amenities ul,
+.places .reviews ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.places .amenities h2,
+.places .reviews h2 {
+  font-size: 16px;
   text-align: left;
-  margin-top: 7px;
-  margin-bottom: 0px;
+  border-bottom: 1px solid #dddddd;
+}
+
+.places .reviews h3 {
+  font-size: 14px;
+}
+
+.places .reviews p {
+  font-size: 12px;
 }
 .places .amenities ul li {
   display: flex;
@@ -129,4 +126,24 @@ article h2 {
   align-content: center;
   margin-bottom: 10px;
   align-items: end;
+}
+
+.places_amenities_pet_friendly {
+  background-image: url(../images/icon_pets.png);
+}
+.places_amenities_tv {
+  background-image: url(../images/icon_tv.png);
+}
+.places_amenities_wifi {
+  background-image: url(../images/icon_wifi.png);
+}
+
+.places_amenities_pet_friendly,
+.places_amenities_tv,
+.places_amenities_wifi {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
 }
